--- a/server/package.json
+++ b/server/package.json
@@ -6,25 +6,33 @@
     "node": ">=12"
   },
   "scripts": {
-    "start": ""
+    "server": "DEBUG=* ts-node-dev --ignore-watch node_modules --no-notify --project ./tsconfig.json ./src/server.ts"
   },
   "dependencies": {
-    "apollo": "^2.30.2",
-    "apollo-server": "^2.16.1",
-    "dotenv": "^8.2.0",
+    "apollo-server-koa": "^2.10.1",
+    "class-validator": "^0.12.0",
+    "debug": "^4.1.1",
     "graphql": "^15.3.0",
-    "graphql-schema-typescript": "^1.3.2",
-    "graphql-tools": "^6.0.16",
     "ipfs-http-client": "^45.0.0",
+    "kcors": "^2.2.2",
+    "koa": "^2.11.0",
     "orbit-db": "^0.24.2",
-    "pg": "^8.3.0",
-    "typescript": "^3.9.7"
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "type-graphql": "^1.1.1",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
+    "@types/debug": "^4.1.5",
     "@types/graphql": "^14.5.0",
+    "@types/kcors": "^2.2.3",
     "@types/node": "^14.0.27",
+    "@types/uuid": "^7.0.2",
+    "node-gyp": "^9.0.0",
     "prettier": "^2.0.5",
-    "tslint": "^6.1.3"
+    "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.9.7"
   }
 }
