--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,16 +5,20 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "target": "esnext",
+    "target": "es5",
     "types": ["node"],
-    "baseUrl": "./src",
-    "paths": {},
-    "pretty": true,
+    "baseUrl": "./",
     "lib": ["es2015", "es2016", "es2017", "esnext", "dom"],
     "outDir": "./build",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "paths": {
+      "@@common/*": ["../common/*"]
+    }
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["./src/**/*"],
 }
