feat: build orbit service (with issue, waiting to rebase)

--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "class-validator": "^0.12.0",
     "debug": "^4.1.1",
     "graphql": "^15.3.0",
-    "ipfs-http-client": "^45.0.0",
+    "ipfs": "^0.55.4",
     "kcors": "^2.2.2",
     "koa": "^2.11.0",
     "orbit-db": "^0.24.2",
@@ -28,6 +28,7 @@
     "@types/graphql": "^14.5.0",
     "@types/kcors": "^2.2.3",
     "@types/node": "^14.0.27",
+    "@types/orbit-db": "https://github.com/orbitdb/orbit-db-types.git",
     "@types/uuid": "^7.0.2",
     "node-gyp": "^9.0.0",
     "prettier": "^2.0.5",
