feat: build client base layout

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,26 +1,26 @@
 {
   "compilerOptions": {
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
-    "jsx": "preserve",
-    "lib": ["dom", "es2017"],
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": false,
-    "preserveConstEnums": true,
-    "removeComments": false,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
     "resolveJsonModule": true,
-    "target": "esnext",
-    "baseUrl": "./",
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"]
+      "@@common/*": ["../common/*"],
+      "@@constants/*": ["./src/constants/*"],
+      "@@hooks/*": ["./src/hooks/*"],
+      "@@components/*": ["./src/components/*"],
     }
   },
-  "includes": [],
-  "exclude": ["node_modules", "build"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
