--- a/client/package.json
+++ b/client/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "description": "codebase of client",
-  "engines": {
-    "node": ">=12"
-  },
+  "private": true,
   "scripts": {
-    "start": "parcel -p 8000 watch src/index.html --open"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "type-check": "tsc"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "apollo-boost": "^0.4.9",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "graphql": "^15.3.0",
-    "graphql-tag": "^2.11.0",
-    "koa": "^2.13.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "typescript": "^3.9.7"
+    "@apollo/client": "^3.5.10",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.2",
+    "@mui/styles": "^5.5.1",
+    "next": "latest",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
-    "parcel": "^1.12.4",
-    "parcel-bundler": "^1.12.4",
-    "prettier": "^2.0.5",
-    "tslint": "^6.1.3"
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@tailwindcss/jit": "^0.1.18",
+    "@types/node": "^12.12.21",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.5",
+    "postcss-preset-env": "^7.4.3",
+    "tailwindcss": "^3.0.24",
+    "typescript": "4.0"
   }
 }
