--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,14 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styles": "^5.5.1",
+    "is-hotkey": "^0.1.6",
+    "is-url": "^1.2.2",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "slate": "^0.77.0",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.77.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
