--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styles": "^5.5.1",
+    "@usedapp/core": "^1.0.0",
     "is-hotkey": "^0.1.6",
     "is-url": "^1.2.2",
     "next": "latest",
