feat: build base article list layout

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,6 +19,7 @@
       "@@constants/*": ["./src/constants/*"],
       "@@hooks/*": ["./src/hooks/*"],
       "@@components/*": ["./src/components/*"],
+      "@@interfaces/*": ["./interfaces/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
