--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.5.2",
     "@mui/styles": "^5.5.1",
     "@usedapp/core": "^1.0.0",
+    "graphql": "^16.3.0",
     "is-hotkey": "^0.1.6",
     "is-url": "^1.2.2",
     "next": "latest",
