--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,11 @@
     "node": ">=12"
   },
   "scripts": {
-    "server": "DEBUG=* ts-node-dev --ignore-watch node_modules --no-notify --project ./tsconfig.json ./src/server.ts"
+    "server": "ts-node-dev --ignore-watch node_modules --no-notify --project ./tsconfig.json ./src/server.ts"
   },
   "dependencies": {
     "apollo-server-koa": "^2.10.1",
     "class-validator": "^0.12.0",
-    "debug": "^4.1.1",
     "graphql": "^15.3.0",
     "ipfs": "^0.55.4",
     "kcors": "^2.2.2",
