--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,6 @@
     "eslint-config-next": "12.1.5",
     "postcss-preset-env": "^7.4.3",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.0"
+    "typescript": "v4.3.2"
   }
 }
